test/fail/void2.min
program
    number x := 123;
    function void test do 123;
start
    for x until test step x do
        "what?" !
    done
end
